--- a/app/route/add.component.html
+++ b/app/route/add.component.html
@@ -1,1 +1,7 @@
 <h1>Add Country </h1>
+
+<input type="text" placeholder="Code" #code/>
+<input type="text" placeholder="Name" #name/>
+<input type="text" placeholder="Capital" #capital/>
+<button (click)="addCountry(code.value, name.value, capital.value)">Add Country </button>
+<h4 [innerText]="message"></h4>
