--- a/app/route/list.component.html
+++ b/app/route/list.component.html
@@ -2,7 +2,8 @@
 
 <ul>
 <li *ngFor="let c of countries">
-     {{c.Name}}
-</li>     
+      <a  [routerLink]="['/details', c.Code]"> {{c.Name}} </a>
+       &nbsp;
+       <a  [routerLink]="['/delete', c.Code]"> Delete </a>
 </ul>
     
